# minishell

./: CMakeLists.txt  main.c
parser/: parse.c  parse.h  word.c
parser/utils/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_split.c  ft_strdup.c  ft_strlen.c  utils.h
